dovecot/dovecot-pigeonhole/tests/extensions/include/errors/circular-3.sieve
require "include";

discard;

include "circular-three";
